# sls-python-poetry-example

./: .gitignore  .tool-versions  README.md  handler.py  handlerjs.mjs  package-lock.json  package.json  pyproject.toml  serverless.yml
