[tool.poetry]
name = "sls-python-poetry-example"
version = "0.1.0"
description = ""
authors = ["Yusuke Goto <u.suke.goto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
